Fix missing parm

--- a/cf.yml
+++ b/cf.yml
@@ -87,7 +87,11 @@ Resources:
               - "yum install git -y\n"
               - "sudo -u ec2-user bash -c 'cd /home/ec2-user; git clone https://"
               - "github.com/craigwongva/blazemeter'\n"
-              - "sudo -u ec2-user bash -c 'cd /home/ec2-user/blazemeter; ./userdata/install &> /tmp/userdata-install\n"
+              - "sudo -u ec2-user bash -c 'cd /home/ec2-user/blazemeter; "
+              - "./userdata/install "
+              - Fn::Sub: ${AWS::StackName}
+              - " "
+              - "&> /tmp/userdata-install\n"
       InstanceType: t2.micro
       ImageId: ami-32d8124a
       Tags:
