--- a/cf.yml
+++ b/cf.yml
@@ -70,6 +70,11 @@ Resources:
         FromPort: 8080
         IpProtocol: tcp
         ToPort: 8080        
+      # CodeBuild us-west-2:
+      - CidrIp: 52.43.76.88/29 
+        FromPort: 8076
+        IpProtocol: tcp
+        ToPort: 8076
   StageEC2Instance:
     Type: AWS::EC2::Instance
     Properties:
